[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/projectiles/WhiteCircle.gd" type="Script" id=1]

[sub_resource type="CircleShape2D" id=1]
radius = 6.0

[node name="WhiteCircle" type="Node2D"]
script = ExtResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )
__meta__ = {
"_editor_description_": ""
}

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_step" from="Tween" to="." method="_on_Tween_tween_step"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
